--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cc.morr.roboboy"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0"
+    >
+    <uses-sdk android:minSdkVersion="17"
+        android:targetSdkVersion="17" />
     <supports-screens
         android:smallScreens="true"
         android:normalScreens="true"
