--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="PageActivity"
+            android:theme="@android:style/Theme.Holo.Light">
+        </activity>
         <activity android:name="SettingsActivity"
             android:theme="@android:style/Theme.Holo.Light">
         </activity>
