--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,12 @@
             android:theme="@android:style/Theme.Holo.Light"
             android:windowSoftInputMode="stateHidden"
             >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="cc.morr.roboboy"/>
+            </intent-filter>
         </activity>
         <activity android:name="SettingsActivity"
             android:theme="@android:style/Theme.Holo.Light">
