--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name="SettingsActivity"
+            android:label="Settings"
             android:theme="@android:style/Theme.Holo.Light">
         </activity>
     </application>
