--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:label="Settings"
             android:theme="@android:style/Theme.Holo.Light">
         </activity>
+        <service android:name=".WikiService" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
