--- a/assets/svg/Makefile
+++ b/assets/svg/Makefile
@@ -1,5 +1,5 @@
 default:
-	convert -background none -resize 96x96 roboboy2.svg ../../res/drawable-xhdpi/ic_launcher.png
-	convert -background none -resize 72x72 roboboy2.svg ../../res/drawable-hdpi/ic_launcher.png
-	convert -background none -resize 48x48 roboboy2.svg ../../res/drawable-mdpi/ic_launcher.png
-	convert -background none -resize 36x36 roboboy2.svg ../../res/drawable-ldpi/ic_launcher.png
+	convert -background none -resize 96x96 roboboy.svg ../../res/drawable-xhdpi/ic_launcher.png
+	convert -background none -resize 72x72 roboboy.svg ../../res/drawable-hdpi/ic_launcher.png
+	convert -background none -resize 48x48 roboboy.svg ../../res/drawable-mdpi/ic_launcher.png
+	convert -background none -resize 36x36 roboboy.svg ../../res/drawable-ldpi/ic_launcher.png
