--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,28 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cc.morr.roboboy"
     android:versionCode="1"
-    android:versionName="1.0"
-    >
-    <uses-sdk android:minSdkVersion="17"
-        android:targetSdkVersion="17" />
+    android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="22" />
     <supports-screens
         android:smallScreens="true"
         android:normalScreens="true"
         android:largeScreens="true"
         android:xlargeScreens="true" />
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MainActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light">
+    <application android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
+        android:theme="@style/AppTheme">
+        <activity android:name="MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="PageActivity"
-            android:theme="@android:style/Theme.Holo.Light"
-            android:windowSoftInputMode="stateHidden"
-            >
+        <activity android:name="PageActivity" android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -31,12 +26,11 @@
                 <data android:scheme="cc.morr.roboboy"/>
             </intent-filter>
         </activity>
-        <activity android:name="SettingsActivity"
-            android:label="Settings"
-            android:theme="@android:style/Theme.Holo.Light">
+        <activity android:name="SettingsActivity" android:label="Settings">
         </activity>
         <service android:name=".WikiService" />
     </application>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
